Fix cropped-officials accordion issue

--- a/htdocs/mivoter.css
+++ b/htdocs/mivoter.css
@@ -176,7 +176,7 @@ address-search {
 
        .panel.show {
           opacity: 1;
-          max-height: 500px;
+          max-height: 2000px;
        }
 
    .noUnderline { text-decoration: none; }
